tests/ui/linkage-attr/raw-dylib/elf/malformed-link-name.stderr
error: link name must be well-formed if link kind is `raw-dylib`
  --> $DIR/malformed-link-name.rs:11:5
   |
LL |     pub safe fn exit_0(status: i32) -> !;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: link name must be well-formed if link kind is `raw-dylib`
  --> $DIR/malformed-link-name.rs:13:5
   |
LL |     pub safe fn exit_1(status: i32) -> !;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: link name must be well-formed if link kind is `raw-dylib`
  --> $DIR/malformed-link-name.rs:15:5
   |
LL |     pub safe fn exit_2(status: i32) -> !;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

